--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Download and extract submission files
         run: |
-          curl -L "${{ github.event.client_payload.submission_url }}?${{ secrets.SUBMISSION_CONTAINER_SAS_TOKEN }}" -o submission.zip
+          curl -L "${{ github.event.client_payload.submission_url }}" -o submission.zip
           unzip submission.zip -d submission
 
       - name: Download and extract question files
